Move gremlin to its own module (#274)
#273 
* remove DatabaseAsyncAbstractTask and move implementation do default methods on interface
*move gremlin plugin away from server to gremlin module
* move GraphMLImporterIT to gremlin module
* add docker profile to the build for e2e tests
* review of E2E tests: singleton container pattern in place
* remove coverage profile from "test" on PRs